example/RISCV_Test/RISCV-RV32I-Assembler/src/lib/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> LABEL COLUMN NEWLINE
Rule 3     statement -> OPCODE register COMMA register COMMA register NEWLINE
Rule 4     statement -> OPCODE register COMMA register COMMA IMMEDIATE NEWLINE
Rule 5     statement -> OPCODE register COMMA IMMEDIATE NEWLINE
Rule 6     statement -> OPCODE register COMMA LABEL NEWLINE
Rule 7     statement -> OPCODE register COMMA register COMMA LABEL NEWLINE
Rule 8     register -> REGISTER
Rule 9     statement -> NEWLINE

Terminals, with rules where they appear

COLUMN               : 2
COMMA                : 3 3 4 4 5 6 7 7
IMMEDIATE            : 4 5
LABEL                : 2 6 7
NEWLINE              : 2 3 4 5 6 7 9
OPCODE               : 3 4 5 6 7
REGISTER             : 8
error                : 

Nonterminals, with rules where they appear

program              : 0
register             : 3 3 3 4 4 5 6 7 7
statement            : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . LABEL COLUMN NEWLINE
    (3) statement -> . OPCODE register COMMA register COMMA register NEWLINE
    (4) statement -> . OPCODE register COMMA register COMMA IMMEDIATE NEWLINE
    (5) statement -> . OPCODE register COMMA IMMEDIATE NEWLINE
    (6) statement -> . OPCODE register COMMA LABEL NEWLINE
    (7) statement -> . OPCODE register COMMA register COMMA LABEL NEWLINE
    (9) statement -> . NEWLINE

    LABEL           shift and go to state 5
    OPCODE          shift and go to state 3
    NEWLINE         shift and go to state 2

    program                        shift and go to state 1
    statement                      shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (9) statement -> NEWLINE .

    $end            reduce using rule 9 (statement -> NEWLINE .)


state 3

    (3) statement -> OPCODE . register COMMA register COMMA register NEWLINE
    (4) statement -> OPCODE . register COMMA register COMMA IMMEDIATE NEWLINE
    (5) statement -> OPCODE . register COMMA IMMEDIATE NEWLINE
    (6) statement -> OPCODE . register COMMA LABEL NEWLINE
    (7) statement -> OPCODE . register COMMA register COMMA LABEL NEWLINE
    (8) register -> . REGISTER

    REGISTER        shift and go to state 6

    register                       shift and go to state 7

state 4

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 5

    (2) program -> LABEL . COLUMN NEWLINE

    COLUMN          shift and go to state 8


state 6

    (8) register -> REGISTER .

    COMMA           reduce using rule 8 (register -> REGISTER .)
    NEWLINE         reduce using rule 8 (register -> REGISTER .)


state 7

    (3) statement -> OPCODE register . COMMA register COMMA register NEWLINE
    (4) statement -> OPCODE register . COMMA register COMMA IMMEDIATE NEWLINE
    (5) statement -> OPCODE register . COMMA IMMEDIATE NEWLINE
    (6) statement -> OPCODE register . COMMA LABEL NEWLINE
    (7) statement -> OPCODE register . COMMA register COMMA LABEL NEWLINE

    COMMA           shift and go to state 9


state 8

    (2) program -> LABEL COLUMN . NEWLINE

    NEWLINE         shift and go to state 10


state 9

    (3) statement -> OPCODE register COMMA . register COMMA register NEWLINE
    (4) statement -> OPCODE register COMMA . register COMMA IMMEDIATE NEWLINE
    (5) statement -> OPCODE register COMMA . IMMEDIATE NEWLINE
    (6) statement -> OPCODE register COMMA . LABEL NEWLINE
    (7) statement -> OPCODE register COMMA . register COMMA LABEL NEWLINE
    (8) register -> . REGISTER

    IMMEDIATE       shift and go to state 13
    LABEL           shift and go to state 11
    REGISTER        shift and go to state 6

    register                       shift and go to state 12

state 10

    (2) program -> LABEL COLUMN NEWLINE .

    $end            reduce using rule 2 (program -> LABEL COLUMN NEWLINE .)


state 11

    (6) statement -> OPCODE register COMMA LABEL . NEWLINE

    NEWLINE         shift and go to state 14


state 12

    (3) statement -> OPCODE register COMMA register . COMMA register NEWLINE
    (4) statement -> OPCODE register COMMA register . COMMA IMMEDIATE NEWLINE
    (7) statement -> OPCODE register COMMA register . COMMA LABEL NEWLINE

    COMMA           shift and go to state 15


state 13

    (5) statement -> OPCODE register COMMA IMMEDIATE . NEWLINE

    NEWLINE         shift and go to state 16


state 14

    (6) statement -> OPCODE register COMMA LABEL NEWLINE .

    $end            reduce using rule 6 (statement -> OPCODE register COMMA LABEL NEWLINE .)


state 15

    (3) statement -> OPCODE register COMMA register COMMA . register NEWLINE
    (4) statement -> OPCODE register COMMA register COMMA . IMMEDIATE NEWLINE
    (7) statement -> OPCODE register COMMA register COMMA . LABEL NEWLINE
    (8) register -> . REGISTER

    IMMEDIATE       shift and go to state 19
    LABEL           shift and go to state 17
    REGISTER        shift and go to state 6

    register                       shift and go to state 18

state 16

    (5) statement -> OPCODE register COMMA IMMEDIATE NEWLINE .

    $end            reduce using rule 5 (statement -> OPCODE register COMMA IMMEDIATE NEWLINE .)


state 17

    (7) statement -> OPCODE register COMMA register COMMA LABEL . NEWLINE

    NEWLINE         shift and go to state 20


state 18

    (3) statement -> OPCODE register COMMA register COMMA register . NEWLINE

    NEWLINE         shift and go to state 21


state 19

    (4) statement -> OPCODE register COMMA register COMMA IMMEDIATE . NEWLINE

    NEWLINE         shift and go to state 22


state 20

    (7) statement -> OPCODE register COMMA register COMMA LABEL NEWLINE .

    $end            reduce using rule 7 (statement -> OPCODE register COMMA register COMMA LABEL NEWLINE .)


state 21

    (3) statement -> OPCODE register COMMA register COMMA register NEWLINE .

    $end            reduce using rule 3 (statement -> OPCODE register COMMA register COMMA register NEWLINE .)


state 22

    (4) statement -> OPCODE register COMMA register COMMA IMMEDIATE NEWLINE .

    $end            reduce using rule 4 (statement -> OPCODE register COMMA register COMMA IMMEDIATE NEWLINE .)

